--- a/Admin/templates/admin.html
+++ b/Admin/templates/admin.html
@@ -1,11 +1,58 @@
-{% extends "admin-layout.html" %}
+{% extends 'admin-layout.html' %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>Admin Dashboard</h1>
-            </div>
+
+<div class="flex py-4 flex-wrap justify-center lg:justify-between space-y-4 sm:space-x-2 sm:space-y-0 lg:space-x-6">
+  <div
+      class="w-60 lg:ml-5 h-60 group/ls !bg-blue-200 mb-4 hover:!bg-slate-900 transition-all duration-700 dark:!bg-slate-900 !rounded-2xl hover:!shadow-lg">
+      <a href="{% url "student" %}" class="h-60 w-60 relative flex justify-end flex-col">
+        <div class="absolute w-7 h-7 p-1 group-hover/ls:bg-white bg-slate-900 rounded-full top-3 right-3" >
+            <svg class="w-5 h-5 dark:text-gray-10 bg-transparent text-white group-hover/ls:!text-slate-900"
+              xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512">
+              <path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"/></svg>
+          </div>
+          <div class="flex px-4 mb-4 space-y-6 flex-col">
+              <svg class="w-24 h-24 dark:text-gray-400 group-hover/ls:!text-white text-gray-900" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512">
+                <path d="M224 0C100.3 0 0 100.3 0 224s100.3 224 224 224 224-100.3 224-224S347.7 0 224 0zm0 416c-88.4 0-160-71.6-160-160S135.6 96 224 96s160 71.6 160 160-71.6 160-160 160zm0-288c-70.7 0-128 57.3-128 128s57.3 128 128 128 128-57.3 128-128-57.3-128-128-128zm0 224c-52.9 0-96-43.1-96-96s43.1-96 96-96 96 43.1 96 96-43.1 96-96 96z"/>
+              </svg>
+              <p class="font-bold dark:text-gray-400 group-hover/ls:!text-white text-gray-900">Add
+                  Students</p>
+          </div>
+      </a>
+  </div>
+
+  <div
+      class="w-60 h-60 group/ls !bg-blue-200 mb-4 hover:!bg-slate-900 transition-all duration-700 dark:!bg-slate-900 !rounded-2xl hover:!shadow-lg">
+      <a href="/teachers" class="h-60 relative w-60 flex justify-end flex-col">
+        <div class="absolute w-7 h-7 p-1 group-hover/ls:bg-white bg-slate-900 rounded-full top-3 right-3" >
+          <svg class="w-5 h-5 dark:text-gray-10 bg-transparent text-white group-hover/ls:!text-slate-900"
+            xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+            aria-hidden="true"viewBox="0 0 256 256"><rect width="256" height="256" fill="none"/><path d="M216,40H40A16,16,0,0,0,24,56V200a16,16,0,0,0,16,16H53.4a7.9,7.9,0,0,0,7.2-4.6,48.1,48.1,0,0,1,86.8,0,7.9,7.9,0,0,0,7.2,4.6H216a16,16,0,0,0,16-16V56A16,16,0,0,0,216,40ZM104,168a32,32,0,1,1,32-32A32.1,32.1,0,0,1,104,168Zm112,32H159.4a63.7,63.7,0,0,0-13.1-16H192a8,8,0,0,0,8-8V80a8,8,0,0,0-8-8H64a8,8,0,0,0-8,8v96a8,8,0,0,0,6,7.7A64.2,64.2,0,0,0,48.6,200H40V56H216Z"/>
         </div>
-    </div>
+          <div class="flex px-4 mb-4 space-y-6 flex-col">
+            <svg class="w-24 h-24 dark:text-gray-400 group-hover/ls:!text-white text-gray-900" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512">
+                <path d="M224 0C100.3 0 0 100.3 0 224s100.3 224 224 224 224-100.3 224-224S347.7 0 224 0zm0 416c-88.4 0-160-71.6-160-160S135.6 96 224 96s160 71.6 160 160-71.6 160-160 160zm0-288c-70.7 0-128 57.3-128 128s57.3 128 128 128 128-57.3 128-128-57.3-128-128-128zm0 224c-52.9 0-96-43.1-96-96s43.1-96 96-96 96 43.1 96 96-43.1 96-96 96z"/>
+              </svg>
+              <p class="font-bold dark:text-gray-400 group-hover/ls:!text-white text-gray-900">Add Teachers</p>
+          </div>
+      </a>
+  </div>
+  <div data-bs-toggle="modal" data-bs-target="#addNotice" class="w-60 h-60 group/ls !bg-blue-200 mb-4 hover:!bg-slate-900 transition-all duration-700 dark:!bg-slate-900 !rounded-2xl hover:!shadow-lg">
+      <a href="#" class="h-60 relative w-60 flex justify-end flex-col">
+          <div class="absolute w-7 h-7 p-1 group-hover/ls:bg-white bg-slate-900 rounded-full top-3 right-3" >
+            <svg class="w-5 h-5 dark:text-gray-10 bg-transparent text-white group-hover/ls:!text-slate-900"
+              xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512">
+              <path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"/></svg>
+          </div>
+          <div class="flex px-4 mb-4 space-y-6 flex-col">
+            <svg class="w-24 h-24 dark:text-gray-400 group-hover/ls:!text-white text-gray-900" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512">
+                <path d="M224 0C100.3 0 0 100.3 0 224s100.3 224 224 224 224-100.3 224-224S347.7 0 224 0zm0 416c-88.4 0-160-71.6-160-160S135.6 96 224 96s160 71.6 160 160-71.6 160-160 160zm0-288c-70.7 0-128 57.3-128 128s57.3 128 128 128 128-57.3 128-128-57.3-128-128-128zm0 224c-52.9 0-96-43.1-96-96s43.1-96 96-96 96 43.1 96 96-43.1 96-96 96z"/>
+              </svg>
+            <p class="font-bold dark:text-gray-400 group-hover/ls:!text-white text-gray-900">Add Notice</p>
+          </div>
+      </a>
+  </div>
+</div>
+
+
 {% endblock %}
