--- a/Home/templates/faculty_dashboard.html
+++ b/Home/templates/faculty_dashboard.html
@@ -20,7 +20,7 @@
           </div>
       </a>
   </div>
-  <div
+  <div data-bs-toggle="modal" data-bs-target="#addMST1"
       class="w-60 h-60 group/ls !bg-blue-200 mb-4 hover:!bg-slate-900 transition-all duration-700 dark:!bg-slate-900 !rounded-2xl hover:!shadow-lg">
       <a href="#" class="h-60 w-60 relative flex justify-end flex-col">
         <div class="absolute w-7 h-7 p-1 group-hover/ls:bg-white bg-slate-900 rounded-full top-3 right-3" >
@@ -38,7 +38,7 @@
           </div>
       </a>
   </div>
-  <div
+  <div data-bs-toggle="modal" data-bs-target="#addMST2"
       class="w-60 h-60 group/ls !bg-blue-200 mb-4 hover:!bg-slate-900 transition-all duration-700 dark:!bg-slate-900 !rounded-2xl hover:!shadow-lg">
       <a href="#" class="h-60 w-60 relative flex justify-end flex-col">
         <div class="absolute w-7 h-7 p-1 group-hover/ls:bg-white bg-slate-900 rounded-full top-3 right-3" >
@@ -56,7 +56,7 @@
           </div>
       </a>
   </div>
-  <div
+  <div data-bs-toggle="modal" data-bs-target="#addAssign"
       class="w-60 h-60 group/ls !bg-blue-200 mb-4 hover:!bg-slate-900 transition-all duration-700 dark:!bg-slate-900 !rounded-2xl hover:!shadow-lg">
       <a href="#" class="h-60 w-60 relative flex justify-end flex-col">
         <div class="absolute w-7 h-7 p-1 group-hover/ls:bg-white bg-slate-900 rounded-full top-3 right-3" >
@@ -92,8 +92,7 @@
           </div>
       </a>
   </div>
-  <div
-      class="w-60 h-60 group/ls !bg-blue-200 mb-4 hover:!bg-slate-900 transition-all duration-700 dark:!bg-slate-900 !rounded-2xl hover:!shadow-lg">
+  <div class="w-60 h-60 group/ls !bg-blue-200 mb-4 hover:!bg-slate-900 transition-all duration-700 dark:!bg-slate-900 !rounded-2xl hover:!shadow-lg">
       <a href="{% url "topics" %}" class="h-60 relative w-60 flex justify-end flex-col">
           <div class="absolute w-7 h-7 p-1 group-hover/ls:bg-white bg-slate-900 rounded-full top-3 right-3" >
             <svg class="w-5 h-5 dark:text-gray-10 bg-transparent text-white group-hover/ls:!text-slate-900"
@@ -111,6 +110,192 @@
       </a>
   </div>
 </div>
-  
+
+<div class="mt-5 border border-slate-300 overflow-hidden rounded-2xl">
+  <div class="mb-4 mt-2 text-xl text-center font-bold">
+    Student Enquiries
+  </div>
+  {%if queries %}
+    {%for query in queries %}
+      <a href="{% url "query" query.id %}">
+      <div class="flex flex-col justify-between bg-white dark:bg-slate-800 p-4 mx-4 rounded-xl shadow-sm mb-4">
+        <div class="flex justify-between items-center ">
+          <div class="flex">
+            <img src="{{ query.student.user.picture.url }}" alt="profile" class="w-12 h-12 rounded-full">
+            <div class="flex flex-col ml-4">
+            <div class="flex items-center space-x-5">
+              <span class="text-xs font-semibold dark:text-gray-400">{{ query.student.user.get_full_name}}</span>
+              <span class="text-xs font-semibold dark:text-gray-400">{{ query.created_at|date:"d M Y" }}</span>
+              <span class="text-xs font-semibold dark:text-gray-400"> <span class="font-bold"> Replies </span> {{ query.student_query_answers.all.count }}</span>
+            </div>
+            <h2 class="text-base font-bold dark:text-gray-200">{{ query.title }}</h2>
+          </div>
+          </div>
+          <div class="flex items-center">
+            <a type="button"  class="bg-slate-900 text-sm text-white px-4 py-1 rounded-xl" data-bs-toggle="modal" data-bs-target="#addReplies{{query.id}}">Reply</a>
+          </div>
+        </div>
+        {% comment %} <p class="text-sm dark:text-gray-200">{{ query.student.student_query_answers.count }}</p> {% endcomment %}
+      </div>
+      </a>
+
+      <div class="modal fade" id="addReplies{{query.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="updateStudentLable" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="updateStudentLable">Reply to {{query.student.user.get_full_name }}</h1>
+                </div>
+                <div class="modal-body">
+                    <form method="POST" action="{% url "query-repliy" %}" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <input type="hidden" name="query_id" value="{{ query.id }}">
+                        <div class="mb-3">
+                            <textarea class="form-control" id="des" name="answer"> </textarea>
+                        </div>
+                        <button type="submit" class="btn btn-info mt-4">Submit</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Discard</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    {% endfor %}
+
+    {% if queries.count > 5 %}
+      <div class="flex mt-5 w-full py-2 bg-slate-900 justify-center">
+        <a href="{% url "queries" %}" class="text-slate-50 dark:text-slate-200">View All</a>
+        {% comment %} {% url "queries" %} {% endcomment %}
+      </div>
+    {% endif %}
+  {%else%}
+    <p class="text-center mb-2 dark:text-gray-200">No Queries Found</p>
+  {% endif %}
+</div>
+
+
+
+<div class="modal fade" id="addMST1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="updateStudentLable" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="bg-slate-900 text-center text-white py-2"> Mst1 Marks </div>
+          <form class="rounded-xl" method="POST" action="{% url "mst1" %}" enctype="multipart/form-data">
+              {% csrf_token %}
+              <table id="data-mst1" class="table-auto table dt-responsive table-bordered nowrap w-100">
+                <thead class="thead-light">
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col">Mst-1 Marks</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for data in student_data %}
+                        <input type="hidden" value="{{ data.student.id }}" class="form-control" id="id" name="id" required>
+                        <tr class="rb-table-row" id="mark-{{ data.student.id }}">
+                            {% if data.student_marks_count > 0 %}
+                                <td>{{ data.student.user.get_full_name }}</td>
+                                <td>
+                                    <input type="number" value="{{ data.student.student_marks.first.mst1 }}" class="form-control" id="mst1" name="mst1" required>
+                                </td>
+                            {% else %}
+                                <td>{{ data.student.user.get_full_name }}</td>
+                                <td>
+                                    <input type="number" class="form-control" id="mst1" name="mst1" required>
+                                </td>
+                            {% endif %}
+                        </tr>
+                    {% endfor %}
+                </tbody>
+                </table>
+                <div class="mt-5 flex items-center">
+                <button type="button" class="btn btn-danger w-full !rounded-none" data-bs-dismiss="modal">Go Back</button>
+                <button type="submit" class="btn btn-primary w-full !rounded-none">Save | Update</button>
+                </div>
+              </form>
+      </div>
+  </div>
+</div>
+<div class="modal fade" id="addMST2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="updateStudentLable" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="bg-slate-900 text-center text-white py-2"> Mst2 Marks </div>
+          <form class="rounded-xl" method="POST" action="{% url "mst2" %}" enctype="multipart/form-data">
+              {% csrf_token %}
+              <table id="data-mst1" class="table-auto table dt-responsive table-bordered nowrap w-100">
+                <thead class="thead-light">
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col">Mst-2 Marks</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for data in student_data %}
+                        <input type="hidden" value="{{ data.student.id }}" class="form-control" id="id" name="id" required>
+                        <tr class="rb-table-row" id="mark-{{ data.student.id }}">
+                            {% if data.student_marks_count > 0 %}
+                                <td>{{ data.student.user.get_full_name }}</td>
+                                <td>
+                                    <input type="number" value="{{ data.student.student_marks.first.mst2 }}" class="form-control" id="mst2" name="mst2" required>
+                                </td>
+                            {% else %}
+                                <td>{{ data.student.user.get_full_name }}</td>
+                                <td>
+                                    <input type="number" class="form-control" id="mst2" name="mst2" required>
+                                </td>
+                            {% endif %}
+                        </tr>
+                    {% endfor %}
+                </tbody>
+                </table>
+                <div class="mt-5 flex items-center">
+                <button type="button" class="btn btn-danger w-full !rounded-none" data-bs-dismiss="modal">Go Back</button>
+                <button type="submit" class="btn btn-primary w-full !rounded-none">Save | Update</button>
+                </div>
+              </form>
+      </div>
+  </div>
+</div>
+<div class="modal fade" id="addAssign" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="updateStudentLable" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="bg-slate-900 text-center text-white py-2"> Assignment Marks </div>
+          <form class="rounded-xl" method="POST" action="{% url "assmarks" %}" enctype="multipart/form-data">
+              {% csrf_token %}
+              <table id="data-assignment" class="table-auto table dt-responsive table-bordered nowrap w-100">
+                <thead class="thead-light">
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col">Assignment Marks</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for data in student_data %}
+                        <input type="hidden" value="{{ data.student.id }}" class="form-control" id="id" name="id" required>
+                        <tr class="rb-table-row" id="mark-{{ data.student.id }}">
+                            {% if data.student_marks_count > 0 %}
+                                <td>{{ data.student.user.get_full_name }}</td>
+                                <td>
+                                    <input type="number" value="{{ data.student.student_marks.first.assignment }}" class="form-control" id="assignment" name="assignment" required>
+                                </td>
+                            {% else %}
+                                <td>{{ data.student.user.get_full_name }}</td>
+                                <td>
+                                    <input type="number" class="form-control" id="assignment" name="assignment" required>
+                                </td>
+                            {% endif %}
+                        </tr>
+                    {% endfor %}
+                </tbody>
+                </table>
+                <div class="mt-5 flex items-center">
+                <button type="button" class="btn btn-danger w-full !rounded-none" data-bs-dismiss="modal">Go Back</button>
+                <button type="submit" class="btn btn-primary w-full !rounded-none">Save | Update</button>
+                </div>
+              </form>
+      </div>
+  </div>
+</div>
 
 {% endblock %}
