--- a/Home/templates/settings/assign-single.html
+++ b/Home/templates/settings/assign-single.html
@@ -1,33 +1,36 @@
 {% extends "admin-layout.html" %}
 
 {% block content %}
-    <div class="container mt-4">
-        <div class="row">
-            <div class="col-md-12">
-                <h1 class="text-2xl font-extraBold mb-5">Assignment Details</h1>
-                <h2 class="mb-2 text-xl font-bold">{{ assignment.title }}</h2>
-                <p class="mb-3 text-sm ">{{ assignment.description }}</p>
-
-                <p class="mb-4 text-sm font-semibold">Due Date: {{ assignment.due_date }}</p>
-                
-                {% for question in assignment.questions.all %}
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h4 class="card-title mb-2 text-lg font-semibold">{{ question.question }}</h4>
-                            <p class="card-text mb-4 text-sm ">{{ question.description }}</p>
-                            {% if question.attachments %}
-                                <a href="{{ question.attachments.url }}" class="btn btn-primary" target="_blank">Download Attachment</a>
-                            {% endif %}
-                        </div>
-                    </div>
-                {% endfor %}
-                
-                {% if not assignment.questions.all %}
-                    <p class="lead">No questions available for this assignment.</p>
+    <div class="container mx-auto mt-8">
+        <div class="bg-white dark:bg-slate-950 rounded-xl p-8">
+            <h1 class="text-2xl text-center font-bold mb-6">Assignment Details</h1>
+            <div class="flex justify-between items-center mb-4">
+                <h3 class="text-lg font-semibold">{{ assignment.title }}</h3>
+                {% if assignment.due_date <= now %}
+                  <p class="text-sm font-bold text-red-500">{{ assignment.due_date }}</p>
+                {% elif assignment.due_date <= now|add:3|date:"Y-m-d" %}
+                  <p class="text-sm font-bold text-red-500">{{ assignment.due_date }}</p>
+                {% else %}
+                    <p class="text-sm font-semibold text-gray-500">{{ assignment.due_date }}</p>
                 {% endif %}
-                
-                <a href="{% url 'update-assignment' assignment.id %}" class="btn btn-success">Update Assignment</a>
             </div>
+            <p class="text-sm text-slate-600 mb-4">{{ assignment.description }}</p>
+
+            {% for question in assignment.questions.all %}
+                <div class="bg-gray-100 border border-gray-200 rounded-xl p-4 mb-6">
+                    <h4 class="text-base font-semibold mb-1">{{ question.question }}</h4>
+                    <p class="text-sm mb-2">{{ question.description }}</p>
+                    {% if question.attachments %}
+                        <a href="{{ question.attachments.url }}" class="bg-slate-900 text-white py-1 px-4 rounded-xl inline-block" target="_blank">View Attachment</a>
+                    {% endif %}
+                </div>
+            {% endfor %}
+
+            {% if not assignment.questions.all %}
+                <p class="text-lg font-semibold">No questions available for this assignment.</p>
+            {% endif %}
+
+            {% comment %} <a href="{% url 'update-assignment' assignment.id %}" class="bg-green-500 text-white py-2 px-4 rounded-lg inline-block mt-4">Update Assignment</a> {% endcomment %}
         </div>
     </div>
 {% endblock %}
