Update views and templates

--- a/Home/templates/index.html
+++ b/Home/templates/index.html
@@ -218,7 +218,7 @@
                 }, 2000)
             </script>
             <div class="">
-                <p class="text-gray-300 font-semibold text-sm">© 2024 IgCMS. All rights reserved.</p>
+                <p class="text-gray-300 font-semibold text-sm">© 2024 IntelliTeach. All rights reserved.</p>
             </div>
         </div>
     </div>
