Add delete_notice view and update admin and faculty dashboards

--- a/Admin/templates/admin-layout.html
+++ b/Admin/templates/admin-layout.html
@@ -142,7 +142,7 @@
                     <textarea name="description" id="description" rows="3" class="mt-1 focus:ring-primary-500 focus:border-primary-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"></textarea>
                 </div>
                 <div class="mb-4">
-                    <label for="attachment" class="block text-sm font-medium text-gray-700">Attachment</label>
+                    <label for="attachment" class="block text-sm font-medium text-gray-700">Attachment (optional)</label>
                     <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
                         <div class="space-y-1 text-center">
                             <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
@@ -178,6 +178,7 @@
     document.querySelector('#addNotice form').addEventListener('submit', async function(event) {
         event.preventDefault();
         const btn = document.getElementById('SUBMITmdl');
+        btn.style.cursor = 'not-allowed';
         btn.disabled = true;
         const formData = new FormData(this);
         let csrf = await cookieStore.get("csrftoken");
@@ -193,10 +194,12 @@
         .then(data => {
             if (data.success) {
                 btn.disabled = false;
-                document.querySelector('#addNotice').modal('hide');
+                $('#addNotice').modal('hide');
+                this.reset();
                 alert(data.message);
             } else {
                 btn.disabled = false;
+                btn.style.cursor = 'pointer';
                 alert('An error occured, please try again later.');
             }
         })
